--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -13,7 +13,7 @@
       <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipYes" value="yes"> Yes</label>
       <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipNo" value="no"> No</label>
     </div>
-    <p><small><i>(If No, please complete Section B)</i></small></p> 
+    <p><small><i>(If No, please complete Section B)</i></small></p>
   </div>
   <div>
     <label for="sectionA_name">Name <small>(as in NRIC)</small></label>
@@ -26,10 +26,11 @@
   <div>
     <div class="labelText">Date of Birth</div>
     <div class="dateGroup">
-      <input type="text" id="sectionA_dateOfBirthDay" name="sectionA_dateOfBirthDay" placeholder="DD" /> <div class="labelText">/</div>
-      <input type="text" id="sectionA_dateOfBirthMonth" name="sectionA_dateOfBirthMonth" placeholder="MM" />
+      <input type="text" id="sectionA_dateOfBirthDay" name="sectionA_dateOfBirthDay" placeholder="DD" maxlength="2" /> <div class="labelText">/</div>
+      <input type="text" id="sectionA_dateOfBirthMonth" name="sectionA_dateOfBirthMonth" placeholder="MM" maxlength="2" />
       <div class="labelText">/</div>
-      <input type="text" id="sectionA_dateOfBirthYear" name="sectionA_dateOfBirthYear" placeholder="YYYY" />
+      <input type="text" id="sectionA_dateOfBirthYear" name="sectionA_dateOfBirthYear" placeholder="YYYY" maxlength="4" />
+
     </div>
   </div>
   <div>
@@ -41,7 +42,7 @@
   </div>
   <div>
     <label for="sectionA_race">Race</label>
-    <select name="sectionA_race" id="sectionA_race">
+    <select name="sectionA_race" id="sectionA_race" data-form-other="sectionA_raceOthersText">
       <option value="">--select--</option>
       <option value="chinese">Chinese</option>
       <option value="malay">Malay</option>
@@ -52,7 +53,7 @@
   </div>
   <div>
     <label for="sectionA_raceOthersText">Others</label>
-    <input type="text" id="sectionA_raceOthersText" name="sectionA_raceOthers" />
+    <input type="text" id="sectionA_raceOthersText" name="sectionA_raceOthers" data-form-other-text="true" />
   </div>
   <div>
     <div class="labelText">Language(s) Spoken</div>
@@ -61,12 +62,9 @@
       <label><input type="checkbox" name="sectionA_languageMandarin" id="sectionA_languageMandarin" value="mandarin"> Mandarin</label>
       <label><input type="checkbox" name="sectionA_languageMalay" id="sectionA_languageMalay" value="malay"> Malay</label>
       <label><input type="checkbox" name="sectionA_languageTamil" id="sectionA_languageTamil" value="languageTamiles"> Hindi/Tamil</label>
-      <label><input type="checkbox" name="sectionA_languageOthers" id="sectionA_languageOthers"> Others</label>
+      <label><input type="checkbox" name="sectionA_languageOthers" id="sectionA_languageOthers" data-form-other="sectionA_languageOthersText"> Others</label>
+      <input type="text" id="sectionA_languageOthersText" name="sectionA_languageOthersText" placeholder="other" data-form-other-text="true" />
     </div>
-  </div>
-  <div>
-    <label for="sectionA_languageOthersText">Others</label>
-    <input type="text" id="sectionA_languageOthersText" name="languageOthersText" />
   </div>
   <div>
     <div class="labelText">Highest Education</div>
@@ -83,12 +81,9 @@
       <label><input type="radio" name="sectionA_sectionA_education" id="sectionA_educationITE" value="ITE"> ITE</label>
       <label><input type="radio" name="sectionA_education" id="sectionA_educationDiploma" value="diploma"> Diploma</label>
       <label><input type="radio" name="sectionA_education" id="sectionA_educationDegreeAbove" value="degree & above"> Degree &amp; Above</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationOthers" value="others"> Others</label>
+      <label><input type="radio" name="sectionA_education" id="sectionA_educationOthers" value="others" data-form-other="sectionA_educationOthersText"> Others</label>
+      <input type="text" id="sectionA_educationOthersText" name="sectionA_educationOthersText" placeholder="other"/>
     </div>
-  </div>
-  <div>
-    <label for="sectionA_educationOthersText">Others</label>
-    <input type="text" id="sectionA_educationOthersText" name="sectionA_educationOthersText" />
   </div>
   <h3>Contact Details</h3>
   <div>
@@ -105,7 +100,7 @@
   </div>
   <div>
     <label for="sectionA_email">Email</label>
-    <input type="text" id="sectionA_email" name="sectionA_email" />
+    <input type="email" id="sectionA_email" name="sectionA_email" />
   </div>
   </fieldset>
   <fieldset id="sectionB">
@@ -147,7 +142,7 @@
     </div>
     <div>
       <label for="sectionB_email">Email</label>
-      <input type="text" id="sectionB_email" name="sectionB_email" />
+      <input type="email" id="sectionB_email" name="sectionB_email" />
     </div>
   </fieldset>
   <fieldset id="sectionC">
@@ -189,23 +184,26 @@
     </div>
     <div>
       <label for="sectionC_email">Email</label>
-      <input type="text" id="sectionC_email" name="sectionC_email" />
+      <input type="email" id="sectionC_email" name="sectionC_email" />
     </div>
   </fieldset>
   <fieldset id="sectionE" class="scoreForm">
     <h2>Section E</h2>
     <p>Part I – Basic activities of daily living (ADL) – Barthel index</p>
     <p>Scoring: Sum the scores for each item. Total possible scores range from 0 to 20, with lower scores indicating increased disability.</p>
-    <div class="score">
+    <div class="scoreRow">
       <div class="labelText">Mobility Indoors</div>
-      <div class="checkBoxGoup">
+      <div class="checkBoxGoup columns">
         <label><input type="checkbox" name="sectionE_moibilityIndoors" id="sectionE_moibilityIndoors" value="0" />Immobile</label>
+        <label><input type="checkbox" name="sectionE_moibilityIndoors" id="sectionE_moibilityIndoors" value="1" />Wheelchair independent (including corners/ doors)</label>
+        <label><input type="checkbox" name="sectionE_moibilityIndoors" id="sectionE_moibilityIndoors" value="2" />Help of one untrained person, including supervision</label>
+        <label><input type="checkbox" name="sectionE_moibilityIndoors" id="sectionE_moibilityIndoors" value="3" />Independent (may use aid) </label>
       </div>
-      <div class="score"></div>
+      <div class="score">1</div>
     </div>
-    <footer>
-      <div>Total Score</div>
-      <input type="text" id="sectionE_totalScore" name="sectionE_totalScore" /> / 20
+    <footer class="scoreTotal inlineGroup">
+      <label for="sectionE_totalScore">Total Score</label>
+      <input type="text" id="sectionE_totalScore" name="sectionE_totalScore" class="noBox text-right" /><div class="labelText">/ 20</div>
     </footer>
   </fieldset>
   <fieldset id="sectionF">
@@ -215,8 +213,8 @@
     <div>
       <div class="labelText">Period:</div>
       <div class="inlineGroup">
-        <label>From <input type="text" id="sectionF_periodFrom" name="sectionF_periodFrom" /></label>
-        <label>to <input type="text" id="sectionF_periodTo" name="sectionF_periodTo" /></label>
+        <label for="sectionF_periodFrom">From</label> <input type="text" id="sectionF_periodFrom" name="sectionF_periodFrom" />
+        <label for="sectionF_periodTo">to</label> <input type="text" id="sectionF_periodTo" name="sectionF_periodTo" />
       </div>
       <div class="radioGroup">
         <label><input type="radio" name="sectionF_period" id="sectionF_periodMorning" value="morning"> Morning</label>
@@ -232,7 +230,7 @@
     </div>
   </fieldset>
   <footer>
-    <button type="" id="previous">Previous</button>
+    <button type="" id="previous" class="buttonNeutral">Previous</button>
     <button type="" id="next">Next</button>
     <button type="submit" id="submit">Submit</button>
   </footer>
