add style of form footer buttons group

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -2,7 +2,11 @@
 
 <form action="" method="">
   <div class="breadcrumbs">
-
+    <ul>
+      <li class="active"><a href="#">Section A</a></li>
+      <li class=""><a href="#">Section B</a></li>
+      <li class=""><a href="#">Section C</a></li>
+    </ul>
   </div>
   <fieldset id="sectionA">
   <legend>Section A</legend>
@@ -229,7 +233,7 @@
       <textarea id="sectionF_remarks" name="sectionF_remarks"></textarea>
     </div>
   </fieldset>
-  <footer>
+  <footer class="buttonsGroup">
     <button type="" id="previous" class="buttonNeutral">Previous</button>
     <button type="" id="next">Next</button>
     <button type="submit" id="submit">Submit</button>
