adjusted breadcrumbs style. Modified custom grids but it is not working.

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -9,7 +9,7 @@
   <fieldset id="sectionA">
   <h2>Section A</h2>
   <p>Main applicant of subsidy schemes - person with muscular dystophy (PMD)</p>
-  <div>
+  <div class="columns1">
     <div class="labelText">I have a valid MDAS Ordinary Membership</div>
     <div class="radioGroup">
       <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipYes" value="yes"> Yes</label>
@@ -17,15 +17,15 @@
     </div>
     <p><small><i>(If No, please complete Section B)</i></small></p>
   </div>
-  <div>
+  <div class="columns2">
     <label for="sectionA_name">Name <small>(as in NRIC)</small></label>
     <input type="text" id="sectionA_name" name="sectionA_name" />
   </div>
-  <div>
+  <div class="columns3">
     <label for="sectionA_nric">NRIC / Birth Cert No.</label>
     <input type="text" id="sectionA_nric" name="sectionA_nric" />
   </div>
-  <div>
+  <div class="">
     <div class="labelText">Date of Birth</div>
     <div class="dateGroup">
       <input type="text" id="sectionA_dateOfBirthDay" name="sectionA_dateOfBirthDay" placeholder="DD" maxlength="2" /> <div class="labelText">/</div>
@@ -35,14 +35,14 @@
 
     </div>
   </div>
-  <div>
+  <div class="">
     <div class="labelText">Gender</div>
     <div class="radioGroup">
       <label><input type="radio" name="sectionA_gender" id="sectionA_genderMale" value="male"> Male</label>
       <label><input type="radio" name="sectionA_gender" id="sectionA_genderFemale" value="female"> Female</label>
     </div>
   </div>
-  <div>
+  <div class="">
     <label for="sectionA_race">Race</label>
     <select name="sectionA_race" id="sectionA_race" data-form-other="sectionA_raceOthersText">
       <option value="">--select--</option>
@@ -53,11 +53,11 @@
       <option value="others">Others</option>
     </select>
   </div>
-  <div>
+  <div class="">
     <label for="sectionA_raceOthersText">Others</label>
     <input type="text" id="sectionA_raceOthersText" name="sectionA_raceOthers" data-form-other-text="true" />
   </div>
-  <div>
+  <div class="">
     <div class="labelText">Language(s) Spoken</div>
     <div class="checkboxGroup">
       <label><input type="checkbox" name="sectionA_languageEnglish" id="sectionA_languageEnglish" value="english"> English</label>
@@ -68,7 +68,7 @@
       <input type="text" id="sectionA_languageOthersText" name="sectionA_languageOthersText" placeholder="other" data-form-other-text="true" />
     </div>
   </div>
-  <div>
+  <div class="">
     <div class="labelText">Highest Education</div>
     <div class="radioGroup" >
       <label><input type="radio" name="sectionA_education" id="sectionA_educationNone" value="none"> None</label>
@@ -88,15 +88,15 @@
     </div>
   </div>
   <h3>Contact Details</h3>
-  <div>
+  <div class="">
     <label for="sectionA_mobile">Mobile</label>
     <input type="text" id="sectionA_mobile" name="sectionA_mobile" />
   </div>
-  <div>
+  <div class="">
     <label for="sectionA_home">Home</label>
     <input type="text" id="sectionA_home" name="sectionA_home" />
   </div>
-  <div>
+  <div class="">
     <label for="sectionA_office">Office</label>
     <input type="text" id="sectionA_office" name="sectionA_office" />
   </div>
