git commit -m "add CNDev branch"

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -7,44 +7,45 @@
     <li class=""><a href="#">Section C</a></li>
   </ul>
   <fieldset id="sectionA">
-  <h2>Section A</h2>
-  <p>Main applicant of subsidy schemes - person with muscular dystophy (PMD)</p>
-  <div class="columns1">
-    <div class="labelText">I have a valid MDAS Ordinary Membership</div>
-    <div class="radioGroup">
-      <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipYes" value="yes"> Yes</label>
-      <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipNo" value="no"> No</label>
+    <h2>Section A</h2>
+    <p>Main applicant of subsidy schemes - person with muscular dystophy (PMD)</p>
+    <div class="columns1">
+      <div class="labelText">I have a valid MDAS Ordinary Membership</div>
+      <div class="radioGroup">
+        <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipYes" value="yes"> Yes</label>
+        <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipNo" value="no"> No</label>
+      </div>
+      <p><small><i>(If No, please complete Section B)</i></small></p>
     </div>
-    <p><small><i>(If No, please complete Section B)</i></small></p>
-  </div>
-  <div class="columns2">
-    <label for="sectionA_name">Name <small>(as in NRIC)</small></label>
-    <input type="text" id="sectionA_name" name="sectionA_name" />
-  </div>
-  <div class="columns3">
-    <label for="sectionA_nric">NRIC / Birth Cert No.</label>
-    <input type="text" id="sectionA_nric" name="sectionA_nric" />
-  </div>
-  <div class="">
-    <div class="labelText">Date of Birth</div>
-    <div class="dateGroup">
-      <input type="text" id="sectionA_dateOfBirthDay" name="sectionA_dateOfBirthDay" placeholder="DD" maxlength="2" /> <div class="labelText">/</div>
-      <input type="text" id="sectionA_dateOfBirthMonth" name="sectionA_dateOfBirthMonth" placeholder="MM" maxlength="2" />
-      <div class="labelText">/</div>
-      <input type="text" id="sectionA_dateOfBirthYear" name="sectionA_dateOfBirthYear" placeholder="YYYY" maxlength="4" />
+    <div class="columns2">
+      <label for="sectionA_name">Name <small>(as in NRIC)</small></label>
+      <input type="text" id="sectionA_name" name="sectionA_name" />
+    </div>
+    <div class="columns3">
+      <label for="sectionA_nric">NRIC / Birth Cert No.</label>
+      <input type="text" id="sectionA_nric" name="sectionA_nric" />
+    </div>
+    <div class="">
+      <div class="labelText">Date of Birth</div>
+      <div class="dateGroup">
+        <input type="text" id="sectionA_dateOfBirthDay" name="sectionA_dateOfBirthDay" placeholder="DD" maxlength="2" />
+        <div class="labelText">/</div>
+        <input type="text" id="sectionA_dateOfBirthMonth" name="sectionA_dateOfBirthMonth" placeholder="MM" maxlength="2" />
+        <div class="labelText">/</div>
+        <input type="text" id="sectionA_dateOfBirthYear" name="sectionA_dateOfBirthYear" placeholder="YYYY" maxlength="4" />
 
+      </div>
     </div>
-  </div>
-  <div class="">
-    <div class="labelText">Gender</div>
-    <div class="radioGroup">
-      <label><input type="radio" name="sectionA_gender" id="sectionA_genderMale" value="male"> Male</label>
-      <label><input type="radio" name="sectionA_gender" id="sectionA_genderFemale" value="female"> Female</label>
+    <div class="">
+      <div class="labelText">Gender</div>
+      <div class="radioGroup">
+        <label><input type="radio" name="sectionA_gender" id="sectionA_genderMale" value="male"> Male</label>
+        <label><input type="radio" name="sectionA_gender" id="sectionA_genderFemale" value="female"> Female</label>
+      </div>
     </div>
-  </div>
-  <div class="">
-    <label for="sectionA_race">Race</label>
-    <select name="sectionA_race" id="sectionA_race" data-form-other="sectionA_raceOthersText">
+    <div class="">
+      <label for="sectionA_race">Race</label>
+      <select name="sectionA_race" id="sectionA_race" data-form-other="sectionA_raceOthersText">
       <option value="">--select--</option>
       <option value="chinese">Chinese</option>
       <option value="malay">Malay</option>
@@ -52,58 +53,58 @@
       <option value="eurasian">Eurasian</option>
       <option value="others">Others</option>
     </select>
-  </div>
-  <div class="">
-    <label for="sectionA_raceOthersText">Others</label>
-    <input type="text" id="sectionA_raceOthersText" name="sectionA_raceOthers" data-form-other-text="true" />
-  </div>
-  <div class="">
-    <div class="labelText">Language(s) Spoken</div>
-    <div class="checkboxGroup">
-      <label><input type="checkbox" name="sectionA_languageEnglish" id="sectionA_languageEnglish" value="english"> English</label>
-      <label><input type="checkbox" name="sectionA_languageMandarin" id="sectionA_languageMandarin" value="mandarin"> Mandarin</label>
-      <label><input type="checkbox" name="sectionA_languageMalay" id="sectionA_languageMalay" value="malay"> Malay</label>
-      <label><input type="checkbox" name="sectionA_languageTamil" id="sectionA_languageTamil" value="languageTamiles"> Hindi/Tamil</label>
-      <label><input type="checkbox" name="sectionA_languageOthers" id="sectionA_languageOthers" data-form-other="sectionA_languageOthersText"> Others</label>
-      <input type="text" id="sectionA_languageOthersText" name="sectionA_languageOthersText" placeholder="other" data-form-other-text="true" />
     </div>
-  </div>
-  <div class="">
-    <div class="labelText">Highest Education</div>
-    <div class="radioGroup" >
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationNone" value="none"> None</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationHomeSchool" value="home school"> Home-school</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationPreSchool" value="pre school"> Pre-school</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationSPED" value="SPED"> SPED</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationPrimary" value="primary"> Primary</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationPSLE" value="psle"> PSLE</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationSecondary" value="secondary"> Secondary</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationNOLevel" value="n/o Level"> N/O Level</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationALevel" value="a level">  A Level</label>
-      <label><input type="radio" name="sectionA_sectionA_education" id="sectionA_educationITE" value="ITE"> ITE</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationDiploma" value="diploma"> Diploma</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationDegreeAbove" value="degree & above" > Degree &amp; Above</label>
-      <label><input type="radio" name="sectionA_education" id="sectionA_educationOthers" value="others" data-form-other="sectionA_educationOthersText"> Others</label>
-      <input type="text" id="sectionA_educationOthersText" name="sectionA_educationOthersText" placeholder="other" data-form-other-text="true"/>
+    <div class="">
+      <label for="sectionA_raceOthersText">Others</label>
+      <input type="text" id="sectionA_raceOthersText" name="sectionA_raceOthers" data-form-other-text="true" />
     </div>
-  </div>
-  <h3>Contact Details</h3>
-  <div class="">
-    <label for="sectionA_mobile">Mobile</label>
-    <input type="text" id="sectionA_mobile" name="sectionA_mobile" />
-  </div>
-  <div class="">
-    <label for="sectionA_home">Home</label>
-    <input type="text" id="sectionA_home" name="sectionA_home" />
-  </div>
-  <div class="">
-    <label for="sectionA_office">Office</label>
-    <input type="text" id="sectionA_office" name="sectionA_office" />
-  </div>
-  <div>
-    <label for="sectionA_email">Email</label>
-    <input type="email" id="sectionA_email" name="sectionA_email" />
-  </div>
+    <div class="">
+      <div class="labelText">Language(s) Spoken</div>
+      <div class="checkboxGroup">
+        <label><input type="checkbox" name="sectionA_languageEnglish" id="sectionA_languageEnglish" value="english"> English</label>
+        <label><input type="checkbox" name="sectionA_languageMandarin" id="sectionA_languageMandarin" value="mandarin"> Mandarin</label>
+        <label><input type="checkbox" name="sectionA_languageMalay" id="sectionA_languageMalay" value="malay"> Malay</label>
+        <label><input type="checkbox" name="sectionA_languageTamil" id="sectionA_languageTamil" value="languageTamiles"> Hindi/Tamil</label>
+        <label><input type="checkbox" name="sectionA_languageOthers" id="sectionA_languageOthers" data-form-other="sectionA_languageOthersText"> Others</label>
+        <input type="text" id="sectionA_languageOthersText" name="sectionA_languageOthersText" placeholder="other" data-form-other-text="true" />
+      </div>
+    </div>
+    <div class="">
+      <div class="labelText">Highest Education</div>
+      <div class="radioGroup">
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationNone" value="none"> None</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationHomeSchool" value="home school"> Home-school</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationPreSchool" value="pre school"> Pre-school</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationSPED" value="SPED"> SPED</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationPrimary" value="primary"> Primary</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationPSLE" value="psle"> PSLE</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationSecondary" value="secondary"> Secondary</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationNOLevel" value="n/o Level"> N/O Level</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationALevel" value="a level">  A Level</label>
+        <label><input type="radio" name="sectionA_sectionA_education" id="sectionA_educationITE" value="ITE"> ITE</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationDiploma" value="diploma"> Diploma</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationDegreeAbove" value="degree & above" > Degree &amp; Above</label>
+        <label><input type="radio" name="sectionA_education" id="sectionA_educationOthers" value="others" data-form-other="sectionA_educationOthersText"> Others</label>
+        <input type="text" id="sectionA_educationOthersText" name="sectionA_educationOthersText" placeholder="other" data-form-other-text="true" />
+      </div>
+    </div>
+    <h3>Contact Details</h3>
+    <div class="">
+      <label for="sectionA_mobile">Mobile</label>
+      <input type="text" id="sectionA_mobile" name="sectionA_mobile" />
+    </div>
+    <div class="">
+      <label for="sectionA_home">Home</label>
+      <input type="text" id="sectionA_home" name="sectionA_home" />
+    </div>
+    <div class="">
+      <label for="sectionA_office">Office</label>
+      <input type="text" id="sectionA_office" name="sectionA_office" />
+    </div>
+    <div>
+      <label for="sectionA_email">Email</label>
+      <input type="email" id="sectionA_email" name="sectionA_email" />
+    </div>
   </fieldset>
   <fieldset id="sectionB">
     <h2>Section B</h2>
@@ -119,7 +120,8 @@
     <div>
       <div class="labelText">Date of Birth</div>
       <div class="dateGroup">
-        <input type="text" id="sectionB_dateOfBirthDay" name="sectionB_dateOfBirthDay" placeholder="DD" /> <div class="labelText">/</div>
+        <input type="text" id="sectionB_dateOfBirthDay" name="sectionB_dateOfBirthDay" placeholder="DD" />
+        <div class="labelText">/</div>
         <input type="text" id="sectionB_dateOfBirthMonth" name="sectionB_dateOfBirthMonth" placeholder="MM" />
         <div class="labelText">/</div>
         <input type="text" id="sectionB_dateOfBirthYear" name="sectionB_dateOfBirthYear" placeholder="YYYY" />
@@ -161,7 +163,8 @@
     <div>
       <div class="labelText">Date of Birth</div>
       <div class="dateGroup">
-        <input type="text" id="sectionC_dateOfBirthDay" name="sectionC_dateOfBirthDay" placeholder="DD" /> <div class="labelText">/</div>
+        <input type="text" id="sectionC_dateOfBirthDay" name="sectionC_dateOfBirthDay" placeholder="DD" />
+        <div class="labelText">/</div>
         <input type="text" id="sectionC_dateOfBirthMonth" name="sectionC_dateOfBirthMonth" placeholder="MM" />
         <div class="labelText">/</div>
         <input type="text" id="sectionC_dateOfBirthYear" name="sectionC_dateOfBirthYear" placeholder="YYYY" />
@@ -205,7 +208,8 @@
     </div>
     <footer class="scoreTotal inlineGroup">
       <label for="sectionE_totalScore">Total Score</label>
-      <input type="text" id="sectionE_totalScore" name="sectionE_totalScore" class="noBox text-right" /><div class="labelText">/ 20</div>
+      <input type="text" id="sectionE_totalScore" name="sectionE_totalScore" class="noBox text-right" />
+      <div class="labelText">/ 20</div>
     </footer>
   </fieldset>
   <fieldset id="sectionF">
@@ -232,8 +236,8 @@
     </div>
   </fieldset>
   <footer class="buttonsGroup">
-    <button type="" id="previous" class="buttonNeutral">Previous</button>
-    <button type="" id="next">Next</button>
+    <button type="button" id="previous" class="buttonNeutral">Previous</button>
+    <button type="button" id="next">Next</button>
     <button type="submit" id="submit">Submit</button>
   </footer>
 </form>
