added functions to validate form when clicking next or previous

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -1,6 +1,4 @@
-<h1>Initial Assessment Form</h1>
-
-<form action="" method="" class="formSection">
+<form id="initialAssessmentForm" action="" method="" class="formSection">
   <ul class="breadcrumbs">
     <li class="active"><a href="#">Section A</a></li>
     <li class=""><a href="#">Section B</a></li>
@@ -232,8 +230,8 @@
     </div>
   </fieldset>
   <footer class="buttonsGroup">
-    <button type="" id="previous" class="buttonNeutral">Previous</button>
-    <button type="" id="next">Next</button>
+    <button type="button" id="previous" class="buttonNeutral">Previous</button>
+    <button type="button" id="next">Next</button>
     <button type="submit" id="submit">Submit</button>
   </footer>
 </form>
