--- a/src/pages/mdas/means-testdeclarationform.html
+++ b/src/pages/mdas/means-testdeclarationform.html
@@ -44,7 +44,7 @@
     </div>
     <div>
       <div class="labelText">Date of Birth<span class="spanCss">*</span></div>
-      <input type="date" id="sectionA_DateofBirth" name="sectionA_DateofBirth" required/>
+      <input type="date" id="sectionA_Birth" name="sectionA_Birth" required/>
     </div>
     <h3>Residence Address (as in NRIC)</h3>
     <div>
@@ -439,7 +439,7 @@
     <p>I/We hereby confirm that I/We understand and agree to all the provisions in this form.</p>
     <h3>MAIN APPLICANT</h3>
     <div>
-      <label for="sectionE_MainName">Name<span>*</span></label>
+      <label for="sectionE_MainName">Name<span class="spanCss">*</span></label>
       <input type="text" id="sectionE_MainName" name="sectionE_MainName" required/>
     </div>
     <div>
@@ -467,6 +467,6 @@
   <footer class="buttonsGroup">
     <button type="button" id="previous" class="buttonNeutral">Previous</button>
     <button type="button" id="next">Next</button>
-    <button type="submit" id="submit">Submit</button>
+    <button type="button" id="submit" class="submit">Submit</button>
   </footer>
 </form>
