git commit -"update save function"

--- a/src/pages/mdas/means-testdeclarationform.html
+++ b/src/pages/mdas/means-testdeclarationform.html
@@ -39,7 +39,7 @@
 
     <div>
       <label for="sectionA_nric">NRIC / Birth Cert No.<span class="spanCss">*</span></label>
-      <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" required/>
+      <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" required value="S8189959B" />
       <span class="form-error">Invalid NRIC</span>
     </div>
     <div>
@@ -111,13 +111,7 @@
     </div>
     <div>
       <div class="labelText">Date of Birth</div>
-      <div class="dateGroup">
-        <input type="text" id="sectionB_dateOfBirthDay" name="sectionB_dateOfBirthDay" placeholder="DD" />
-        <div class="labelText">/</div>
-        <input type="text" id="sectionB_dateOfBirthMonth" name="sectionB_dateOfBirthMonth" placeholder="MM" />
-        <div class="labelText">/</div>
-        <input type="text" id="sectionB_dateOfBirthYear" name="sectionB_dateOfBirthYear" placeholder="YYYY" />
-      </div>
+      <input type="text" id="sectionB_Birth" name="sectionB_Birth" />
     </div>
 
     <h3>Residence Address (as in NRIC)</h3>
