--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,4 @@
----
-layout: dashboard
----
+--- layout: dashboard ---
 <h1><small>Welcome</small> Mr Dell Goh</h1>
 <div id="mainWidgets">
   <section id="widget-events" class="widget">
@@ -80,19 +78,20 @@ layout: dashboard
       </div>
     </div>
   </section>
-</div> <!-- main widgets area -->
+</div>
+<!-- main widgets area -->
 <aside id="sideWidgets" class="sidebar">
   <div id="quickLinks" class="widget">
     <ul>
-      <li><a href="#" id="addDonation" class="buttonType3 left"><i class="icon"><img src="{{root}}/assets/img/icon-light-donation.png" alt="icon"></i> New Donation</a></li>
-      <li><a href="#" id="addEvent" class="buttonType3 left"><i class="icon"><img src="{{root}}/assets/img/icon-light-event-add.png" alt="icon"></i> New Event</a></li>
-      <li><a href="#" id="addVolunteer" class="buttonType3 left"><i class="icon"><img src="{{root}}/assets/img/icon-light-volunteer.png" alt="icon"></i> New Volunteer</a></li>
+      <li><a href="#" id="addDonation" class="buttonType3 left"><i class="icon"><img src="{{root}}assets/img/icon-light-donation.png" alt="icon"></i> New Donation</a></li>
+      <li><a href="#" id="addEvent" class="buttonType3 left"><i class="icon"><img src="{{root}}assets/img/icon-light-event-add.png" alt="icon"></i> New Event</a></li>
+      <li><a href="#" id="addVolunteer" class="buttonType3 left"><i class="icon"><img src="{{root}}assets/img/icon-light-volunteer.png" alt="icon"></i> New Volunteer</a></li>
     </ul>
   </div>
   <div id="calendar" class="widget">
     <h3>Calendar</h3>
     <p>
-      <img src="{{root}}/assets/img/calendar.jpg" alt="" >
+      <img src="{{root}}/assets/img/calendar.jpg" alt="">
     </p>
   </div>
   <div id="reports" class="widget">
