--- a/src/pages/mdas/means-testdeclarationform.html
+++ b/src/pages/mdas/means-testdeclarationform.html
@@ -61,7 +61,7 @@
     </div>
     <div>
       <label for="sectionA_BuildingName">Building Name</label>
-      <input type="text" id="sectionA_PostalCode" name="sectionA_PostalCode" />
+      <input type="text" id="sectionA_BuildingName" name="sectionA_BuildingName" />
     </div>
     <div>
       <label for="sectionA_StreetName">Street Name</label>
