--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -644,8 +644,8 @@
         </div>
     </fieldset>
     <footer class="buttonsGroup">
-        <button type="" id="previous" class="buttonNeutral">Previous</button>
-        <button type="" id="next">Next</button>
-        <button type="button" id="submit">Submit</button>
+        <button type="button" id="previous" class="buttonNeutral">Previous</button>
+        <button type="button" id="next">Next</button>
+        <button type="button" id="submit" class="submit">Submit</button>
     </footer>
 </form>
