update date group styles

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -26,10 +26,11 @@
   <div class="">
     <div class="labelText">Date of Birth</div>
     <div class="dateGroup">
-      <input type="text" id="sectionA_dateOfBirthDay" name="sectionA_dateOfBirthDay" placeholder="DD" maxlength="2" /> <div class="labelText">/</div>
-      <input type="text" id="sectionA_dateOfBirthMonth" name="sectionA_dateOfBirthMonth" placeholder="MM" maxlength="2" />
+      <input type="text" id="sectionA_dateOfBirthDay" name="sectionA_dateOfBirthDay"  maxlength="2" data-date-group="DD" /> <label for="sectionA_dateOfBirthDay">DD</label> <div class="labelText">/</div>
+      <input type="text" id="sectionA_dateOfBirthMonth" name="sectionA_dateOfBirthMonth" data-date-group="MM" maxlength="2" />
+      <label for="sectionA_dateOfBirthMonthMM">MM</label>
       <div class="labelText">/</div>
-      <input type="text" id="sectionA_dateOfBirthYear" name="sectionA_dateOfBirthYear" placeholder="YYYY" maxlength="4" />
+      <input type="text" id="sectionA_dateOfBirthYear" name="sectionA_dateOfBirthYear" data-date-group="YYYY" maxlength="4" /> <label for="sectionA_dateOfBirthYear">YYYY</label>
 
     </div>
   </div>
@@ -117,10 +118,11 @@
     <div>
       <div class="labelText">Date of Birth</div>
       <div class="dateGroup">
-        <input type="text" id="sectionB_dateOfBirthDay" name="sectionB_dateOfBirthDay" placeholder="DD" /> <div class="labelText">/</div>
-        <input type="text" id="sectionB_dateOfBirthMonth" name="sectionB_dateOfBirthMonth" placeholder="MM" />
+        <input type="text" id="sectionB_dateOfBirthDay" name="sectionB_dateOfBirthDay" data-date-group="DD" /> <label for="sectionB_dateOfBirthDay">DD</label> <div class="labelText">/</div>
+        <input type="text" id="sectionB_dateOfBirthMonth" name="sectionB_dateOfBirthMonth" data-date-group="MM" /> <label for="sectionB_dateOfBirthMonth">MM</label>
         <div class="labelText">/</div>
-        <input type="text" id="sectionB_dateOfBirthYear" name="sectionB_dateOfBirthYear" placeholder="YYYY" />
+        <input type="text" id="sectionB_dateOfBirthYear" name="sectionB_dateOfBirthYear" data-date-group="YYYY" />
+        <label for="sectionB_dateOfBirthYear">YYYY</label>
       </div>
     </div>
     <div>
@@ -159,10 +161,12 @@
     <div>
       <div class="labelText">Date of Birth</div>
       <div class="dateGroup">
-        <input type="text" id="sectionC_dateOfBirthDay" name="sectionC_dateOfBirthDay" placeholder="DD" /> <div class="labelText">/</div>
-        <input type="text" id="sectionC_dateOfBirthMonth" name="sectionC_dateOfBirthMonth" placeholder="MM" />
+        <input type="text" id="sectionC_dateOfBirthDay" name="sectionC_dateOfBirthDay" data-date-group="DD" /> <label for="sectionC_dateOfBirthDay">DD</label> <div class="labelText">/</div>
+        <input type="text" id="sectionC_dateOfBirthMonth" name="sectionC_dateOfBirthMonth" data-date-group="MM" />
+        <label for="sectionC_dateOfBirthMonth">MM</label>
         <div class="labelText">/</div>
-        <input type="text" id="sectionC_dateOfBirthYear" name="sectionC_dateOfBirthYear" placeholder="YYYY" />
+        <input type="text" id="sectionC_dateOfBirthYear" name="sectionC_dateOfBirthYear" data-date-group="YYYY" />
+        <label for="sectionC_dateOfBirthYear">YYYY</label>
       </div>
     </div>
     <div>
