git commit -m "Update"

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -340,7 +340,7 @@
         </div>
         <div class="columns3">
             <label>Date</label>
-            <input type="text" id="sectionD_Date" name="sectionD_Date" />
+            <input type="date" id="sectionD_Date" name="sectionD_Date" />
 
         </div>
     </fieldset>
@@ -561,7 +561,7 @@
         </div>
         <div class="columns3">
             <label>Date</label>
-            <input type="text" id="sectionE_Date" name="sectionE_Date" />
+            <input type="date" id="sectionE_Date" name="sectionE_Date" />
 
         </div>
     </fieldset>
@@ -584,7 +584,7 @@
             </div>
             <div>
                 <label>Timing</label>
-                <input type="text" id="sectionF_Timing" name="sectionF_Timing" />
+                <input type="text" id="sectionF_TimingText" name="sectionF_TimingText" />
             </div>
             <div class="radioGroup">
                 <label><input type="radio" name="sectionF_Timing" id="sectionF_TimingMon" value="Mon"> Mon</label>
@@ -608,7 +608,7 @@
         </div>
         <div class="columns3">
             <label>Date</label>
-            <input type="text" id="sectionF_Date" name="sectionF_Date" />
+            <input type="date" id="sectionF_Date" name="sectionF_Date" />
 
         </div>
 
